* Added the --config arg for the asset CLI command to specify a config file
* Added methods for deleting subnets, deleting internet gateways, deleting VPCs, and deleting the default VPC
* Added methods for getting a list of cons3rt bucket source IPs, and adding IPs to the list

0.0.12
======

* Added methods for listing unattached EBS volumes
* Added methods for deleting EBS volumes and snapshots
* Added methods for stopping and terminating instances
* Added methods for waiting for instances to be in various target states
* Added a method to wait for an AMI to become available after creation
* Added a method to create a network interface
* Added a method to launch a VM onto a dedicated host
* Added a setup script
* Added the migrate CLI command, and a method to check capacity of a specific instance type on a dedicated host
* Added kmsutil.py to integrate with AWS KMS
* Added functionality to the S3Util to handle encryping objects in place in a bucket with the provided KMS key
* Updated host migration methods to use OS type and run a user-data script to configure sshd
* Added the ability to migrate a deployment run to a dedicated host
* Codified Linux user-data scripts for bringing a NAT instance online, and for migrating a Linux VM
* Added a script for asset export / re-import
* Added methods to get IPs and permissions for RHUI1 and RHUI2 AWS Red Hat server IPs
* Added re-try logic acount http multipart uploads to better handle asset imports
* Updated setting asset state to the newer versions 

0.0.11
=======

* Added queries for listing test assets
* Added a query for getting dependent assets
* Added ec2util functions for getting a list of IpPermission objects from domain names
* Added network.py and new function for getting IPs froma list of hostnames

0.0.10
=======

* Fixed a bug reporting errors with servicerunner
* Added a method to power on multiple runs
* Optimized queries to retrieve DR details from the multiple run host action workflow