@@ -13,6 +13,7 @@
 * Added the --config arg for the asset CLI command to specify a config file
 * Added methods for deleting subnets, deleting internet gateways, deleting VPCs, and deleting the default VPC
 * Added methods for getting a list of cons3rt bucket source IPs, and adding IPs to the list
+* Added methods for creating and managing reverse lookup zones in AWS Route53
 
 0.0.12
 ======
